AMDGPU fails to load with W6800 on 5.13.x and up
Brief summary of the problem:
AMDGPU would fails to load with message at beginning stating [drm:amdgpu_ras_eeprom_init [amdgpu]] *ERROR Failed to read EEPROM table header, ret:-5
This issue only happens on any kernel from 5.13+. The current LTS Kernel as well as the previous EOL stable kernel (5.12.x) do not exhibit this issue. (there is more to the error but unable to get any logs as easily currently besides just pictures of the error and stacktrace though I am working on trying to get full logs of it to go over it completely and also be able to provide it in this report, if this is the appropriate place). It also only happens with W6800 as my previous cards (Vega Frontier Edition, XFX 5700XT) did not have this issue. Unsure if this happens with any other "Sienna Cichlid" GPU.
Hardware description:
- CPU: AMD Threadripper 1950X
- GPU: 2xAMD Radeon Pro W6800
- System Memory: 64GB DDR4
- Display(s): 3x1920x1080 144Hz
- Type of Diplay Connection: 2xMini-DP to DP, 1xMini-DP to HDMI
System information:
- Distro name and Version: ArchLinux
- Kernel version: 5.13.7
- Custom kernel: N/A
- AMD package version: No package
How to reproduce the issue:
Boot into the system with a W6800 with any kernel current stable kernel or RC kernel and amdgpu will error and no longer proceed with the boot process while the current/latest LTS kernel as well as the EOL stable kernel 5.12.19 do not have this error.