drivers/gpu/drm/amd/amdgpu/amdgpu_ras_eeprom.c
@@ -117,21 +117,8 @@ static bool __get_eeprom_i2c_addr(struct amdgpu_device *adev,
 	if (!control)
 		return false;
 
-	control->i2c_address = 0;
-
-	if (amdgpu_atomfirmware_ras_rom_addr(adev, (uint8_t*)&control->i2c_address))
-	{
-		if (control->i2c_address == 0xA0)
-			control->i2c_address = 0;
-		else if (control->i2c_address == 0xA8)
-			control->i2c_address = 0x40000;
-		else {
-			dev_warn(adev->dev, "RAS EEPROM I2C address not supported");
-			return false;
-		}
-
+	if (amdgpu_atomfirmware_ras_rom_addr(adev, (uint8_t*)i2c_addr))
 		return true;
-	}
 
 	switch (adev->asic_type) {
 	case CHIP_VEGA20:
